# weblogic-rest-openapi

./: .gitignore  CHANGELOG.md  README.md
docs/: EDIT_TREE_WORKFLOW.md  PHASE1_PLAN.md  PHASE4C_PATHS.md  PHASE4D1_QUALITY.md  PHASE4D2_QUIRKS.md  PHASE4D3_TYPES.md  PHASE4D5_MULTIVERSION.md  PHASE4D6_DESCRIPTIONS.md  PHASE4D7_SAMPLES.md  PHASE4D9_PATH_EXPANSION.md  PHASE4E2_CURATION.md  PHASE4E3_STUBS.md  PHASE4E_BULK_COVERAGE.md  PHASE4F_MERGE.md  PHASE4_GENERATOR.md  QUIRKS.md  REMAINING_WORK.md
overlays/: envelopes.yaml  harvested-gaps.yaml  nullability.yaml  operations-virtual.yaml
overlays/descriptions/: AppClientComponentRuntime.yaml  AppDeployment.yaml  AppDeploymentRuntime.yaml  AppRuntimeStateRuntime.yaml  ApplicationRuntime.yaml  Capacity.yaml  ChangeManagerState.yaml  Cluster.yaml  ConnectorComponentRuntime.yaml  DeploymentManager.yaml  DeploymentProgressObject.yaml  JTA.yaml  (+38 more)
tools/openapi-generator/: .gitignore  README.md  pyproject.toml
tools/openapi-generator/src/: compare.py  descriptions.py  dump_yaml.py  enum_extractor.py  harvested_gaps.py  harvested_loader.py  main.py  manual_loader.py  manual_schemas.py  multiversion.py  nullability.py  operations.py  overlays.py  path_builder.py  phase4b_runner.py  phase4c_report.py  phase4d1_report.py  phase4d2_report.py  phase4d3_report.py  phase4d5_report.py  phase4e_report.py  polymorphism.py  prune_unused.py  quirks.py  sample_loader.py  schema_builder.py
tools/openapi-generator/tests/: _oas_jsonschema.py  test_action_param_shapes.py  test_live_smoke.py  test_sample_provenance.py  test_sample_schema.py
(+174 files in other folders)
