[project]
name = "wls-openapi-generator"
version = "0.1.0"
description = "Transform WebLogic Remote Console harvested MBean YAMLs into OpenAPI 3.0 schemas."
requires-python = ">=3.11"
dependencies = [
    "ruamel.yaml>=0.18",
    "pyyaml>=6.0",
    "openapi-spec-validator>=0.7",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.20",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "live: hits a real WebLogic domain (opt-in via -m live; needs WLS_HOST/WLS_USER/WLS_PASS/WLS_VERSION env vars)",
]
addopts = "-m 'not live'"
